--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,26 @@
-sudo: required
 language: python
+sudo: required
 services:
-  - docker
-
-before_script: docker-compose -f tests/docker-compose.yml up -d
-script: python setup.py test
+    - docker
 
 python:
     - "2.6"
     - "2.7"
 env:
-    - STORM_VERSION=0.9.6
-    - STORM_VERSION=0.10.0
-    - STORM_VERSION=0.10.1
-    - STORM_VERSION=1.0.0
-    - STORM_VERSION=1.0.1
+    global:
+        - DOCKER_COMPOSE_VERSION=1.7.1
+    matrix:
+        - STORM_VERSION=0.9.6
+        - STORM_VERSION=0.10.0
+        - STORM_VERSION=0.10.1
+        - STORM_VERSION=1.0.0
+        - STORM_VERSION=1.0.1
+
+before_install:
+    - sudo rm /usr/local/bin/docker-compose
+    - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+    - chmod +x docker-compose
+    - sudo mv docker-compose /usr/local/bin
+
+before_script: docker-compose -f tests/docker-compose.yml up -d
+script: python setup.py test
