--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
     - "2.7"
 env:
     global:
+        - DOCKER_VERSION=1.11.2-0~trusty
         - DOCKER_COMPOSE_VERSION=1.7.1
     matrix:
         - STORM_VERSION=0.9.6
@@ -17,6 +18,10 @@ env:
         - STORM_VERSION=1.0.1
 
 before_install:
+    # upgrade docker-engine to specific version
+    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_VERSION}
+
+    # reinstall docker-compose at specific version
     - sudo rm /usr/local/bin/docker-compose
     - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
     - chmod +x docker-compose
