--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
     zookeeper:
-        image: 31z4/zookeeper:3.4.8
+        image: zookeeper:3.4
         restart: always
 
     storm-nimbus:
